--- a/res/layout/fragmentbluetoothinfo.xml
+++ b/res/layout/fragmentbluetoothinfo.xml
@@ -45,6 +45,7 @@
 
     <RelativeLayout
         android:id="@+id/rl_bt_right"
+        android:paddingRight="10px"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1" >
