--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
     <com.goodocom.gocsdkfinal.view.MyFragmentTabHost
         android:id="@android:id/tabhost"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="64px">
         <FrameLayout
             android:id="@android:id/tabcontent"
             android:layout_width="0dp"
