--- a/res/layout/fragmentcallphone.xml
+++ b/res/layout/fragmentcallphone.xml
@@ -3,15 +3,33 @@
     xmlns:dc="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:orientation="vertical" >
+        
+         <TextView 
+            android:id="@+id/tv_phonenumber"
+            android:layout_width="match_parent"
+            android:layout_height="40px"
+            android:gravity="center_vertical"
+            android:textColor="#FFF"
+            android:textSize="28sp"/>
+         
+         <View 
+            android:id="@+id/write_line"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#FFF"/>
 
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal" >
+    
     <LinearLayout
         android:id="@+id/ll_number"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1" 
-        android:orientation="vertical"
-        android:padding="50dp">
+        android:layout_weight="3"
+        android:orientation="vertical">
         <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -20,21 +38,15 @@
             
             <ImageView 
                 android:id="@+id/iv_one"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
+                style="@style/DialpadButtonStyle"
                 android:src="@drawable/btn_jianpan_1_selector"/>
             <ImageView 
                  android:id="@+id/iv_two"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
+                style="@style/DialpadButtonStyle"
                 android:src="@drawable/btn_jianpan_2_selector"/>
             <ImageView 
                  android:id="@+id/iv_three"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
+                style="@style/DialpadButtonStyle"
                 android:src="@drawable/btn_jianpan_3_selector"/>
             
         </LinearLayout>
@@ -45,21 +57,15 @@
             android:orientation="horizontal">
             <ImageView 
                  android:id="@+id/iv_four"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
+                style="@style/DialpadButtonStyle"
                 android:src="@drawable/btn_jianpan_4_selector"/>
             <ImageView 
                  android:id="@+id/iv_five"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
+                style="@style/DialpadButtonStyle"
                 android:src="@drawable/btn_jianpan_5_selector"/>
             <ImageView 
                  android:id="@+id/iv_six"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
+                style="@style/DialpadButtonStyle"
                 android:src="@drawable/btn_jianpan_6_selector"/>
             
         </LinearLayout>
@@ -70,21 +76,15 @@
             android:orientation="horizontal">
             <ImageView 
                  android:id="@+id/iv_seven"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
+                style="@style/DialpadButtonStyle"
                 android:src="@drawable/btn_jianpan_7_selector"/>
             <ImageView 
                  android:id="@+id/iv_eight"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
+                style="@style/DialpadButtonStyle"
                 android:src="@drawable/btn_jianpan_8_selector"/>
             <ImageView 
                  android:id="@+id/iv_nine"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
+                style="@style/DialpadButtonStyle"
                 android:src="@drawable/btn_jianpan_9_selector"/>
             
         </LinearLayout>
@@ -96,65 +96,54 @@
             
             <ImageView 
                  android:id="@+id/iv_xinghao"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
+                style="@style/DialpadButtonStyle"
                 android:src="@drawable/btn_jianpan_xinghao_selector"/>
             <ImageView 
                  android:id="@+id/iv_zero"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
+                style="@style/DialpadButtonStyle"
                 android:src="@drawable/btn_jianpan_0_selector"/>
             <ImageView
                  android:id="@+id/iv_jinghao"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
+                style="@style/DialpadButtonStyle"
                 android:src="@drawable/btn_jianpan_jinghao_selector"/>
             
         </LinearLayout>
         
     </LinearLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/rl_action"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1" 
-        android:padding="10dp">
-       
-        <View 
-            android:id="@+id/write_line"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#FFF"
-            android:layout_centerInParent="true"/>
-         <TextView 
-            android:id="@+id/tv_phonenumber"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:layout_above="@id/write_line"
-            android:textColor="#FFF"
-            android:textSize="23sp"/>
+        android:orientation="vertical">
+         
+         <View 
+             android:layout_width="match_parent"
+             android:layout_height="0dp"
+             android:layout_weight="1"/>
+         
          <ImageView 
              android:id="@+id/iv_callout"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_below="@id/write_line"
-             android:layout_marginTop="20dp"
-             android:layout_marginLeft="40dp"
+             style="@style/DialpadButtonActionStyle"
              android:src="@drawable/btn_jianpan_bohao_selector"/>
+         
+         <View 
+             android:layout_width="match_parent"
+             android:layout_height="0dp"
+             android:layout_weight="1"/>
+         
          <ImageView 
              android:id="@+id/iv_delete"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_below="@id/write_line"
-             android:layout_marginTop="20dp"
-             android:layout_marginRight="40dp"
-             android:layout_alignParentRight="true"
+             style="@style/DialpadButtonActionStyle"
              android:src="@drawable/btn_jianpan_qingchu_selector"/>
-    </RelativeLayout>
+         
+         <View 
+             android:layout_width="match_parent"
+             android:layout_height="0dp"
+             android:layout_weight="1"/>
+    </LinearLayout>
+    
+</LinearLayout>
 
 </LinearLayout>
