--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -21,5 +21,24 @@
        <item name="android:windowIsFloating">true</item>
        <item name="android:backgroundDimEnabled">false</item> 
     </style>
+    
+    <style name="DialpadButtonStyle">
+       <item name="android:layout_width">0px</item>
+       <item name="android:layout_height">56px</item>
+       <item name="android:layout_weight">1</item>
+       <item name="android:scaleType">centerInside</item>
+    </style>
+    
+    <style name="DialpadButtonActionStyle">
+       <item name="android:layout_width">56px</item>
+       <item name="android:layout_height">56px</item>
+    </style>
+    
+    <style name="SettingsLineStyle">
+       <item name="android:layout_width">match_parent</item>
+       <item name="android:layout_height">56px</item>
+       <item name="android:paddingTop">6px</item>
+       <item name="android:paddingBottom">6px</item>
+    </style>
 
 </resources>
