--- a/res/layout/activity_incoming.xml
+++ b/res/layout/activity_incoming.xml
@@ -10,26 +10,24 @@
 	    android:layout_height="wrap_content"
 	    android:layout_marginTop="50dp"
 	    android:textColor="#fff"
-	    android:textSize="23sp"
-	    android:text="15219452946"
+	    android:textSize="32sp"
 	    android:layout_centerHorizontal="true"/>
 	<TextView 
 	    android:id="@+id/tv_incoming_status"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
-	    android:text="来电..."
+	    android:text="@string/incoming"
 	    android:layout_centerHorizontal="true"
 	    android:layout_below="@id/tv_incoming_phonenumber"
 	    android:textColor="#fff"
-	    android:textSize="23sp"/>
+	    android:textSize="32sp"/>
 	<ImageView 
 	   android:id="@+id/iv_connect"
 	   android:layout_width="wrap_content"
 	   android:layout_height="wrap_content" 
-	   android:layout_marginLeft="150dp"
+	   android:layout_marginLeft="40dp"
 	   android:layout_alignParentBottom="true"
-	    android:layout_marginBottom="50dp"
-	   android:layout_below="@id/tv_incoming_status"
+	    android:layout_marginBottom="60dp"
 	   android:src="@drawable/btn_jianpan_bohao_selector"/>
 	<ImageView 
 	    android:id="@+id/iv_hangup"
@@ -37,8 +35,7 @@
 	    android:layout_height="wrap_content"
 	    android:layout_alignParentRight="true"
 	    android:layout_alignParentBottom="true"
-	    android:layout_marginBottom="50dp"
-	     android:layout_below="@id/tv_incoming_status"
-	    android:layout_marginRight="150dp"
+	    android:layout_marginBottom="60dp"
+	    android:layout_marginRight="40dp"
 	    android:src="@drawable/btn_jianpan_guaduan_selector"/>
 </RelativeLayout>
