--- a/res/layout/activity_settings.xml
+++ b/res/layout/activity_settings.xml
@@ -2,7 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/beijing" >
+    android:layout_height="match_parent" >
      
 </FrameLayout>
