--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -45,5 +45,8 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowCloseOnTouchOutside">false</item>
     </style>
+    
+    <style name="SettingsActivityTheme" parent="android:Theme.Material.Light.NoActionBar">
+    </style>
 
 </resources>
