--- a/res/layout/wt_fragment_bt_list.xml
+++ b/res/layout/wt_fragment_bt_list.xml
@@ -18,10 +18,10 @@
         <TextView
             android:id="@+id/search"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical|right"
-            android:layout_marginRight="8dp"
-            android:background="@drawable/wt_btn_bg"
+            android:gravity="center"
+            android:padding="16dp"
             android:text="@string/search"
             android:textColor="#ffffffff"
             android:visibility="gone"/>
