--- a/res/layout/wt_preference_list_fragment.xml
+++ b/res/layout/wt_preference_list_fragment.xml
@@ -16,6 +16,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center_horizontal"
+            android:src="@drawable/wt_settings_page_indicator1"/>
     </FrameLayout>
 
     <ListView android:id="@android:id/list"
